<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>orbslam3</name>
  <version>1.0.0</version>
  <description>ROS2 wrapper for ORB_SLAM3 library</description>
  <maintainer email="zang09@naver.com">Haebeom Jung</maintainer>
  <license>MIT</license>
  <author>Haebeom Jung</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>message_filters</depend>
  <depend>Pangolin</depend>


  <depend>numpy</depend>
  <depend>cv2</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs.msg</depend>
  <depend>rclpy.node</depend>
  <depend>launch</depend>
  <depend>launch_ros.actions</depend>
  <depend>launch.actions</depend>
  <depend>sensor_msgs/image_encodings.hpp</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
